# kplayer

./: README.md
project/andruid/: build-clean.sh  build.gradle  dependencies.gradle  settings.gradle
project/andruid/example/live-rtmp/: build.gradle
project/andruid/example/live-rtmp/src/main/: AndroidManifest.xml
project/andruid/example/live-rtmp/src/main/cpp/: CMakeLists.txt  Logger.h  RtmpWrap.cpp  RtmpWrap.h  ScreenLive_jni.cpp
project/andruid/example/live-rtmp/src/main/cpp/librtmp/: CMakeLists.txt
project/andruid/example/live-rtmp/src/main/res/layout/: activity_live.xml  activity_main.xml
project/andruid/example/live-rtmp/src/main/res/values/: strings.xml  themes.xml
project/andruid/example/live-rtmp/src/main/res/values-night/: themes.xml
project/andruid/gradle/wrapper/: gradle-wrapper.properties
project/andruid/ktplayer/: build.gradle
project/andruid/ktplayer-example/: build.gradle
project/andruid/ktplayer-example/src/androidTest/java/dai/android/media/: ExampleInstrumentedTest.kt
project/andruid/ktplayer-example/src/main/: AndroidManifest.xml
project/andruid/ktplayer-example/src/main/java/dai/android/media/: MainActivity.kt
project/andruid/ktplayer-example/src/main/res/values/: strings.xml  themes.xml
project/andruid/ktplayer-example/src/main/res/values-night/: themes.xml
project/andruid/ktplayer/src/main/: AndroidManifest.xml
src/: CMakeLists.txt
src/core/include/: Condition.h  Core.h  Define.h  Event.h  Exception.h  Logger.h  Macro.h  Mutex.h  Namespace.h  Platform.h  Runnable.h  Thread.h
src/core/src/: Condition.cpp  Event.cpp  Exception.cpp  Mutex.cpp  Runnable.cpp  Thread.cpp
src/platform/android/: android_main.cpp
src/platform/android/core/: Logger.cpp
src/platform/android/include/: J4A.h
src/platform/android/src/: J4A.c
src/platform/android/src/core/: Logger.c
src/platform/ios/src/core/: Logger.cpp
(+15 files in other folders)
